[gd_scene load_steps=3 format=3 uid="uid://be0gw1jsr4cgt"]

[ext_resource type="Texture2D" uid="uid://bxhacq1rjhan7" path="res://TempTitleScreenBg.png" id="1_ax32a"]
[ext_resource type="Script" uid="uid://ds5io6jvf6tai" path="res://title.gd" id="1_quvj1"]

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_quvj1")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("1_ax32a")

[node name="Start" type="Label" parent="."]
layout_mode = 0
offset_left = 852.0
offset_top = 391.0
offset_right = 1048.0
offset_bottom = 475.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45
text = "Start"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="StartButton" type="Button" parent="Start"]
modulate = Color(1, 1, 1, 0)
light_mask = 4
visibility_layer = 4
layout_mode = 0
offset_left = 1.0
offset_top = 3.0
offset_right = 198.0
offset_bottom = 76.0
text = "
"

[node name="Options" type="Label" parent="."]
layout_mode = 0
offset_left = 850.0
offset_top = 471.0
offset_right = 1046.0
offset_bottom = 555.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="OptionButton" type="Button" parent="Options"]
modulate = Color(1, 1, 1, 0)
light_mask = 4
visibility_layer = 4
layout_mode = 0
offset_left = 1.0
offset_top = 3.0
offset_right = 198.0
offset_bottom = 76.0
text = "
"

[node name="Quit" type="Label" parent="."]
layout_mode = 0
offset_left = 850.0
offset_top = 550.0
offset_right = 1048.0
offset_bottom = 634.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45
text = "Quit"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="QuitButton" type="Button" parent="Quit"]
modulate = Color(1, 1, 1, 0)
light_mask = 4
visibility_layer = 4
layout_mode = 0
offset_left = 1.0
offset_top = 3.0
offset_right = 198.0
offset_bottom = 76.0
text = "
"

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 727.0
offset_top = 77.0
offset_right = 1188.0
offset_bottom = 246.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "BallKnobbers"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="Title"]
layout_mode = 0
offset_left = 125.0
offset_top = 114.0
offset_right = 325.0
offset_bottom = 243.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45
text = "at
"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Title"]
layout_mode = 0
offset_left = -111.0
offset_top = 168.0
offset_right = 575.0
offset_bottom = 257.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "Mayor Manor"
horizontal_alignment = 1

[connection signal="pressed" from="Start/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Options/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="Quit/QuitButton" to="." method="_on_quit_button_pressed"]
